# sub-service

./: .gitmodules  CMakeLists.txt  README.md
include/: IConnManagerService.h  IConnManagerServiceTypes.h  Readme.txt  main,cpp  main.cpp
poco/: CMakeLists.txt
src/: Readme.txt
test/: Readme.txt
